--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+#app
+app.py
 # C extensions
 *.so
 
@@ -110,7 +112,7 @@ ENV/
 env.bak/
 venv.bak/
 vir/
-
+.env.sample
 #file
 tokens.txt
 
